instructions.Instructions.scala.error
Compilation error:
Instructions:8: error: identifier expected but ')' found.
afterward(e.g.)
              ^