instructions.Instructions.scala.code
forward(2)
brushDown()
right()
forward(2)
brushUp()
left()
backward()
afterward(e.g.)
